# Chess2

./: CMakeLists.txt  LICENSE.md  README.md
include/: agent.hpp  board.hpp  matchMaster.hpp  player.hpp  types.hpp  utilities.hpp
src/: CMakeLists.txt  main.cpp
src/agent/: CMakeLists.txt  agent.cpp  functor.cpp  readMessage.cpp  writeMessage.cpp
src/board/: CMakeLists.txt  board.cpp  move.cpp
src/matchMaster/: CMakeLists.txt  connectClient.cpp  disconnectClient.cpp  functor.cpp  matchMaster.cpp
src/player/: CMakeLists.txt  getTeam.cpp  player.cpp  setTeam.cpp
src/utilities/: CMakeLists.txt
